# igv_exploer

./: Blacklist.tsv  DoubleChecklist.tsv  IGV Tinder.py  IGV_viewer.py  README.md  package.json  pyproject.toml  test.jl  test.py  test.ui  viewer.py  viwer.py  widet.py
public/: electron.js
test/: chromo22.csv
