[tool.poetry]
name = "igv_py_widget"
version = "0.1.0"
description = ""
authors = ["tu1026 <s31302@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
PyQt5 = "^5.15.6"
pandas = "^1.4.0"
# ipykernel = "^6.9.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
